objects/State_Permit__c/State_Permit__c.object-meta.xml
<CustomObject>
    <label>State Permit</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>