objects/State_Permit__c/fields/ACV_Location__c.field-meta.xml
<CustomField>
    <fullName>ACV_Location__c</fullName>
    <label>ACV Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>