objects/State_Permit__c/fields/Additional_Costs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Costs__c</fullName>
    <label>Additional Cost</label>
    <type>TextArea</type>
</CustomField>