objects/State_Permit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>