objects/State_Permit__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Contact Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>