objects/State_Permit__c/fields/Cost_of_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Renewal__c</fullName>
    <label>Renewal Cost</label>
    <type>TextArea</type>
</CustomField>