objects/State_Permit__c/fields/Expiration_CVI__c.field-meta.xml
<CustomField>
    <fullName>Expiration_CVI__c</fullName>
    <label>Expiration- CVI</label>
    <type>Date</type>
</CustomField>