objects/State_Permit__c/fields/Include__c.field-meta.xml
<CustomField>
    <fullName>Include__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include</label>
    <type>Checkbox</type>
</CustomField>