objects/State_Permit__c/fields/Length_of_Permit__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Permit__c</fullName>
    <label>Length of Permit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>