objects/State_Permit__c/fields/Marking_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Marking_Requirements__c</fullName>
    <label>Vehicle Marking Requirements</label>
    <type>TextArea</type>
</CustomField>