objects/State_Permit__c/fields/Permit_Book_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Permit_Book_Requirements__c</fullName>
    <label>Permit Book Requirements</label>
    <type>TextArea</type>
</CustomField>