objects/State_Permit__c/fields/Permit_Location__c.field-meta.xml
<CustomField>
    <fullName>Permit_Location__c</fullName>
    <label>Permit Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Linden Branch</fullName>
            </value>
            <value>
                <fullName>MA Branch</fullName>
            </value>
            <value>
                <fullName>NJ Branch</fullName>
            </value>
            <value>
                <fullName>New York Branch</fullName>
            </value>
            <value>
                <fullName>Northern PA</fullName>
            </value>
            <value>
                <fullName>Pennsylvania Branch</fullName>
            </value>
            <value>
                <fullName>Rahway Branch</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>