objects/State_Permit__c/fields/Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Permit_Number__c</fullName>
    <label>Permit Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>