objects/State_Permit__c/fields/Permit_Number_CVI__c.field-meta.xml
<CustomField>
    <fullName>Permit_Number_CVI__c</fullName>
    <label>Permit Number- CVI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>