objects/State_Permit__c/fields/Permit_Status__c.field-meta.xml
<CustomField>
    <fullName>Permit_Status__c</fullName>
    <label>Permit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>