objects/State_Permit__c/fields/Permitted_Company__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Company__c</fullName>
    <label>Permitted Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACV Enviromental Svc</fullName>
                <label>ACV Environmental Svc</label>
            </value>
            <value>
                <fullName>Allstate Power Vac</fullName>
            </value>
            <value>
                <fullName>Clean Venture</fullName>
            </value>
            <value>
                <fullName>Cycle Chem</fullName>
            </value>
            <value>
                <fullName>Envirotech</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>