objects/State_Permit__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>