objects/State_Permit__c/fields/Trans_Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Trans_Permit_Type__c</fullName>
    <label>Trans Permit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Specific</fullName>
            </value>
            <value>
                <fullName>General (Non-Vehicle Specific)</fullName>
            </value>
            <value>
                <fullName>Company-Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>