objects/State_Permit__c/fields/Transportation_Permit__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transportation Permit</label>
    <type>Checkbox</type>
</CustomField>