objects/State_Permit__c/fields/Type_of_Permit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Permit__c</fullName>
    <label>Permit Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>