objects/State_Permit__c/fields/Web_User_Information__c.field-meta.xml
<CustomField>
    <fullName>Web_User_Information__c</fullName>
    <label>Web User Information</label>
    <type>TextArea</type>
</CustomField>