objects/State_Permit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Agency__c</columns>
    <columns>NAME</columns>
    <columns>Permit_Location__c</columns>
    <columns>Permit_Number__c</columns>
    <columns>Expiration__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>